[package]
name = "api-key-manager"
version = "0.1.0"
description = "On-chain API key management system built with Anchor on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "api_key_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"